--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
-        "swiper": "^8.0.7"
+        "swiper": "^8.0.7",
+        "vue-sweetalert2": "^5.0.2"
     }
 }
