--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=e72cec53ff9f72b89c0cde64c174b8eb",
+    "/css/app.css": "/css/app.css?id=7acfcd793e564bc892af4289cab2dc60"
 }
